fix wrong field name

--- a/templates/form.html
+++ b/templates/form.html
@@ -16,8 +16,8 @@
             <label for="password">Password:</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="Enter a password.">
 
-            <label for="photo">Profile Photo</label>
-            <input type="file" class="form-control-file" id="photo" name="photo">
+            <label for="attachment">Profile Photo</label>
+            <input type="file" class="form-control-file" id="attachment" name="attachment">
 
         </div>
         <button type="submit" class="btn btn-success">Sign Up</button>
