fix wrong field name

--- a/templates/form.html
+++ b/templates/form.html
@@ -16,7 +16,7 @@
             <label for="password">Password:</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="Enter a password.">
 
-            <label for="attachment">Profile Photo</label>
+            <label for="attachment">Attachment</label>
             <input type="file" class="form-control-file" id="attachment" name="attachment">
 
         </div>
